# desafio-fastapi-moniari

./: README.md
api_service/: .env_example  logger_config.json  main.py  pyproject.toml
api_service/.run/: Run app.run.xml
api_service/api/v1/: api.py  rest.py
api_service/api/v1/endpoints/: test.py
api_service/api/v1/endpoints/stock/: stock_controller.py
api_service/autentication/: autentication.py
api_service/config/: config.py
api_service/schemas/user_stock/: user_stock_schema.py
api_service/utils/: custom_logging.py
stock_service/: .env_example  logger_config.json  main.py  pyproject.toml  utils.py
stock_service/.run/: Run App.run.xml
stock_service/api/v1/: api.py  rest.py
stock_service/api/v1/endpoints/: test.py
stock_service/api/v1/endpoints/stock/: stock_adapter.py  stock_controller.py  stock_service.py
stock_service/config/: config.py
stock_service/exceptions/: default_exception.py
stock_service/schemas/stock/: stock_schema.py
stock_service/utils/: custom_logging.py
